# fingerprint-based-blood-group-detection

backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  schemas.py
backend/app/ml/: dataset.py  infer.py  models.py  train.py
backend/app/services/: routes.py
backend/app/static/: app.js  index.html  styles.css
backend/scripts/: train.py
